# LLM_Building_BLock

./: .gitignore  01_llm_schema.html  01_llm_schema.py  02-score.py  02_self_checking_llm.html  02_self_checking_llm.py  03-annotate.py  03_summary_function.html  03_summary_function.py  04_summary_function_strip_tags.py  05_async_llm_spam_detection_w_cache.py  06_annotation_framework_with_mirascope.py  README.md  cmd.txt  demo.py  df_new.pkl  pyproject.toml
HR_Information/: cache.db  cache.db-shm  cache.db-wal
LLM_Prompt_Cache/: cache.db
__marimo__/: 04_summary_function_strip_tags.html  05_async_llm_spam_detection_w_cache.html
__marimo__/session/: 02-score.py.json  03-annotate.py.json  05_async_llm_spam_detection_w_cache.py.json  06_annotation_framework_with_mirascope.py.json  06_annotation_framework_with_mirascope_and_synthetic_data_caching.py.json
accuracy-experiment/: cache.db  cache.db-shm  cache.db-wal
naming-prompts/: cache.db
